:wrench: change keywords

--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   "keywords": [
     "vue-flipper",
     "vue-flip",
+    "flipper",
     "flip",
     "vue-component",
-    "vue"
+    "vue",
+    "flip-animation",
+    "animation",
+    "transition",
+    "bem-methodology",
+    "stylus",
+    "bili"
   ],
   "author": {
     "url": "https://vitorluizc.github.io/",
